// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabNav component Should render one tab 1`] = `
<div>
  <div
    class="APMTabNav-container"
  >
    <button
      class="APMTabNav-tab"
    >
      <i
        class="APMTabNav-tab-icon fal home"
      />
      foo
    </button>
  </div>
</div>
`;

exports[`TabNav component Should render two tabs 1`] = `
<div>
  <div
    class="APMTabNav-container"
  >
    <button
      class="APMTabNav-tab"
    >
      <i
        class="APMTabNav-tab-icon fal home"
      />
      foo
    </button>
    <button
      class="APMTabNav-tab"
    >
      <i
        class="APMTabNav-tab-icon fal bar"
      />
      bar
    </button>
  </div>
</div>
`;

exports[`TabNav component Should render with className 1`] = `
<div>
  <div
    class=" APMTabNav-container polysacharides-container"
  >
    <button
      class=" APMTabNav-tab polysacharides-tab"
    >
      <i
        class=" APMTabNav-tab-icon polysacharides-tab-icon fal home"
      />
      foo
    </button>
  </div>
</div>
`;
